log correction, add mybatis crud
